--- a/003-hands_on_exercises/index.html
+++ b/003-hands_on_exercises/index.html
@@ -7,12 +7,8 @@
 </head>
 <body>
 
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-
-<img src="../005-hoe_flexbox/balls.jpg" alt="a picture of tennis balls">
+<div class="one"></div>
+<div class="two"></div>
 
 </body>
 </html>
