--- a/007-counter/index.html
+++ b/007-counter/index.html
@@ -6,13 +6,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-
-<img src="../005-hoe_flexbox/balls.jpg" alt="a picture of tennis balls">
-
+<div id="counter">
+    <div id="counter-control-l">&minus;</div>
+    <div id="counter-value">42</div>
+    <div id="counter-control-r">&plus;</div>
+</div>
 </body>
 </html>
