--- a/007-counter/index.html
+++ b/007-counter/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div id="counter">
-    <div id="counter-control-l">&minus;</div>
+    <div class="trans" id="counter-control-l">&minus;</div>
     <div id="counter-value">42</div>
-    <div id="counter-control-r">&plus;</div>
+    <div class="trans" id="counter-control-r">&plus;</div>
 </div>
 </body>
 </html>
